--- a/app/src/main/res/drawable/background_selector.xml
+++ b/app/src/main/res/drawable/background_selector.xml
@@ -5,7 +5,7 @@
         android:state_pressed="false"
         android:state_selected="true" />
     <!-- Standard background color -->
-    <item android:drawable="@android:color/white"
+    <item android:drawable="@android:color/transparent"
         android:state_selected="false" />
 
 </selector>
