--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="black_overlay">#66000000</color>
+    <color name="foreground_material_light">#000000</color>
+    <color name="colorButtonNormalM">#bcaaa4</color>
 </resources>
