--- a/app/src/main/res/layout/activity_play_desk.xml
+++ b/app/src/main/res/layout/activity_play_desk.xml
@@ -51,7 +51,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:orientation="vertical">
-
+h
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
@@ -192,7 +192,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/fight"
-                        android:theme="@style/AppTheme.Button"/>
+                        android:background="@drawable/style_button" />
 
                     <Button
                         android:id="@+id/run_button"
@@ -200,7 +200,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/next_player"
-                        android:theme="@style/AppTheme.Button"/>
+                        android:background="@drawable/style_button" />
 
                 </LinearLayout>
 
