--- a/app/src/main/res/layout/zoom_layout.xml
+++ b/app/src/main/res/layout/zoom_layout.xml
@@ -4,46 +4,53 @@
     android:layout_height="match_parent"
     android:background="#EFEBE9">
 
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_zoom_cards"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
+        android:layout_gravity="left"
         android:padding="8dp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:layout_gravity="right"
         android:padding="8dp">
 
         <Button
             android:id="@+id/move_to_played_button"
+            android:layout_margin="@dimen/button_margin"
             android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:text="Move to Played"
-            android:theme="@style/AppTheme.Button"/>
+            android:background="@drawable/style_button"/>
 
         <Button
             android:id="@+id/move_to_hand_button"
+            android:layout_margin="@dimen/button_margin"
             android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:text="Move to Hand"
-            android:theme="@style/Animation.Design.BottomSheetDialog" />
+            android:background="@drawable/style_button" />
 
         <Button
             android:id="@+id/move_to_desk_buton"
+            android:layout_margin="@dimen/button_margin"
             android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:text="Move to desk"
-            android:theme="@style/AppTheme.Button" />
+            android:background="@drawable/style_button" />
 
         <Button
             android:id="@+id/move_to_passive_card_deck"
+            android:layout_margin="@dimen/button_margin"
             android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:text="DELETE"
-            android:theme="@style/AppTheme.Button" />
+            android:background="@drawable/style_button" />
     </LinearLayout>
 
 </LinearLayout>
