--- a/app/src/main/res/layout/activity_error.xml
+++ b/app/src/main/res/layout/activity_error.xml
@@ -13,53 +13,49 @@
         card_view:cardCornerRadius="10dp"
         card_view:cardUseCompatPadding="true">
 
-        <LinearLayout
+        <RelativeLayout
+            android:id="@+id/main_error_window"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:padding="4dp"
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/main_error_window_titel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="24dp"
+                android:layout_margin="24dp"
                 android:text="@string/error_uncaught_exception"
                 android:textAppearance="?android:attr/textAppearanceLarge"/>
 
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="8"
-                android:padding="24dp">
+                android:layout_height="match_parent"
+                android:layout_below="@id/main_error_window_titel"
+                android:paddingBottom="24dp"
+                android:layout_marginBottom="24dp">
 
                 <TextView
                     android:id="@+id/text_error"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:paddingHorizontal="8dp"
                     android:textAppearance="?android:attr/textAppearanceMedium"/>
 
             </ScrollView>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
-                android:paddingRight="24dp"
-                android:paddingLeft="24dp"
-                android:gravity="center">
-
                 <Button
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="12dp"
+                    android:layout_marginVertical="2dp"
                     android:textSize="24sp"
                     android:text="@string/ok"
+                    android:layout_alignParentBottom="true"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:onClick="onErrorDismissClicked"/>
 
-            </LinearLayout>
-
-        </LinearLayout>
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
