update -> mini change in Fight dialog

--- a/app/src/main/res/layout/dialog_fight_button.xml
+++ b/app/src/main/res/layout/dialog_fight_button.xml
@@ -1,86 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/dialog_fight_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EFEBE9"
     android:orientation="vertical">
 
-    <LinearLayout
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="6">
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:layout_margin="4dp"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
-
-        <ImageButton
-            android:id="@+id/player_card_image"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="320dp"
-            android:background="@android:color/transparent"
-            android:scaleType="fitCenter"
-            android:src="@drawable/warrior"/>
+            android:layout_height="35dp"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-condensed"
-            android:text="@string/your_fightlevel"
-            android:textSize="24sp"
-            android:textStyle="italic" />
+    </android.support.design.widget.AppBarLayout>
 
-        <TextView
-            android:id="@+id/your_fightlevel_value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-condensed"
-            android:text="1"
-            android:textSize="24sp"
-            android:textStyle="italic" />
-
-    </LinearLayout>
+    <ScrollView
+        android:id="@+id/scrollAplicacoes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:layout_margin="4dp"
-            android:gravity="center_horizontal"
-            android:orientation="vertical">
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="6">
 
-            <ImageButton
-                android:id="@+id/monster_card_image"
-                android:layout_width="match_parent"
-                android:layout_height="320dp"
-                android:background="@android:color/transparent"
-                android:scaleType="fitCenter"/>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_margin="4dp"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-condensed"
-                android:text="@string/monster_fightlevel"
-                android:textSize="24sp"
-                android:textStyle="italic"
-                />
+                <ImageButton
+                    android:id="@+id/player_card_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="320dp"
+                    android:background="@android:color/transparent"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/warrior"/>
 
-            <TextView
-                android:id="@+id/monster_fightlevel_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-condensed"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-condensed"
+                    android:text="@string/your_fightlevel"
+                    android:textSize="22sp"
+                    android:textStyle="italic" />
 
-                android:text="1"
-                android:textSize="24sp"
-                android:textStyle="italic" />
+                <TextView
+                    android:id="@+id/your_fightlevel_value"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-condensed"
+                    android:text="1"
+                    android:textSize="24sp"
+                    android:textStyle="italic" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_margin="4dp"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
+
+                <ImageButton
+                    android:id="@+id/monster_card_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="320dp"
+                    android:background="@android:color/transparent"
+                    android:scaleType="fitCenter"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-condensed"
+                    android:text="@string/monster_fightlevel"
+                    android:textSize="22sp"
+                    android:textStyle="italic" />
+
+                <TextView
+                    android:id="@+id/monster_fightlevel_value"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-condensed"
+
+                    android:text="1"
+                    android:textSize="24sp"
+                    android:textStyle="italic" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
 
 
     <LinearLayout
