--- a/app/src/main/res/layout/app_bar_drawer_play_desk.xml
+++ b/app/src/main/res/layout/app_bar_drawer_play_desk.xml
@@ -8,12 +8,10 @@
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
-            android:title="jadshbfdsbcdljbdjb"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
