--- a/app/src/main/res/layout/dialog_fight_button.xml
+++ b/app/src/main/res/layout/dialog_fight_button.xml
@@ -21,15 +21,18 @@
 
     </android.support.design.widget.AppBarLayout>
 
+
     <ScrollView
         android:id="@+id/scrollAplicacoes"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="6">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="6">
+
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -101,7 +104,6 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-
 
     <LinearLayout
         android:layout_width="match_parent"
