--- a/app/src/main/res/layout/dialog_fight_button.xml
+++ b/app/src/main/res/layout/dialog_fight_button.xml
@@ -4,58 +4,42 @@
     android:id="@+id/dialog_fight_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EFEBE9"
+    android:background="@drawable/dialog_bg"
     android:orientation="vertical">
-
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </android.support.design.widget.AppBarLayout>
 
 
     <ScrollView
         android:id="@+id/scrollAplicacoes"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="6">
+        android:layout_weight="14">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="6">
-
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
                 android:layout_margin="4dp"
+                android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:orientation="vertical">
 
                 <ImageButton
                     android:id="@+id/player_card_image"
                     android:layout_width="match_parent"
-                    android:layout_height="320dp"
+                    android:layout_height="300dp"
                     android:background="@android:color/transparent"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/warrior"/>
+                    android:src="@drawable/warrior" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-condensed"
                     android:text="@string/your_fightlevel"
-                    android:textSize="22sp"
+                    android:textSize="20sp"
                     android:textStyle="italic" />
 
                 <TextView
@@ -72,24 +56,24 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
                 android:layout_margin="4dp"
+                android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:orientation="vertical">
 
                 <ImageButton
                     android:id="@+id/monster_card_image"
                     android:layout_width="match_parent"
-                    android:layout_height="320dp"
+                    android:layout_height="300dp"
                     android:background="@android:color/transparent"
-                    android:scaleType="fitCenter"/>
+                    android:scaleType="fitCenter" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-condensed"
                     android:text="@string/monster_fightlevel"
-                    android:textSize="22sp"
+                    android:textSize="20sp"
                     android:textStyle="italic" />
 
                 <TextView
@@ -109,27 +93,28 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
-        android:padding="8dp">
+        android:layout_weight="2"
+        android:padding="4dp">
 
         <Button
             android:id="@+id/fight_diaolog_fight_button"
             android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_marginHorizontal="4dp"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:text="FIGHT"
-            android:background="@drawable/style_button" />
+            android:layout_marginHorizontal="4dp"
+            android:layout_weight="1"
+            android:background="@drawable/style_button"
+            android:text="FIGHT" />
+
         <Button
             android:id="@+id/fight_diaolog_run_button_button"
             android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_marginHorizontal="4dp"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:text="RUN AWAY"
-            android:background="@drawable/style_button" />
+            android:layout_marginHorizontal="4dp"
+            android:layout_weight="1"
+            android:background="@drawable/style_button"
+            android:text="RUN AWAY" />
     </LinearLayout>
 
 </LinearLayout>
