--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,6 +34,7 @@
         <item name="android:enabled">true</item>
     </style>
 
+    <style name="DialogTheme" parent="Animation.AppCompat.Dialog"></style>
 
     <style name="Munchkin" parent="AppTheme" />
 
