--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,13 +16,14 @@
             android:text="Munchkin"
             android:textStyle="italic"
             android:gravity="center"
-            android:textSize="85sp"
-            android:textColor="#795548"
-            android:padding="16dp" />
+            android:textSize="80sp"
+            android:textColor="#3E2723"
+            android:paddingTop="24sp"
+            android:layout_margin="28sp" />
 
         <ImageButton
-            android:layout_width="300dp"
-            android:layout_height="300dp"
+            android:layout_width="250dp"
+            android:layout_height="200dp"
             android:src="@drawable/ic_play_circle_outline_black_48dp"
             android:layout_gravity="center_horizontal"
             android:background="@android:color/transparent"
