--- a/app/src/main/res/layout/zoom_layout.xml
+++ b/app/src/main/res/layout/zoom_layout.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:background="#EFEBE9">
-
+    android:background="@drawable/dialog_bg">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_zoom_cards"
