--- a/app/src/main/res/layout/activity_play_desk.xml
+++ b/app/src/main/res/layout/activity_play_desk.xml
@@ -55,7 +55,7 @@ h
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="3">
+                    android:layout_weight="2">
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -83,10 +83,11 @@ h
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:orientation="vertical">
+                        android:orientation="horizontal">
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="8dp"
                             android:layout_marginRight="8dp"
@@ -96,120 +97,57 @@ h
                             android:textSize="24sp"
                             android:textStyle="italic" />
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
+                        <RelativeLayout
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="50dp"
+                            android:gravity="fill_vertical">
 
-                            <RelativeLayout
+                            <ImageView
                                 android:layout_width="50dp"
-                                android:layout_height="50dp">
+                                android:layout_height="50dp"
+                                android:src="@drawable/man" />
 
-                                <ImageView
-                                    android:layout_width="50dp"
-                                    android:layout_height="50dp"
-                                    android:src="@drawable/man" />
+                            <ImageView
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:src="@drawable/man_shoes"
+                                android:id="@+id/man_shoes"
+                                android:visibility="invisible" />
 
-                                <ImageView
-                                    android:layout_width="50dp"
-                                    android:layout_height="50dp"
-                                    android:src="@drawable/man_shoes"
-                                    android:id="@+id/man_shoes"
-                                    android:visibility="invisible" />
+                            <ImageView
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:src="@drawable/man_armor"
+                                android:id="@+id/man_armor"
+                                android:visibility="invisible" />
 
-                                <ImageView
-                                    android:layout_width="50dp"
-                                    android:layout_height="50dp"
-                                    android:src="@drawable/man_armor"
-                                    android:id="@+id/man_armor"
-                                    android:visibility="invisible" />
+                            <ImageView
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:src="@drawable/man_head"
+                                android:id="@+id/man_head"
+                                android:visibility="invisible" />
 
-                                <ImageView
-                                    android:layout_width="50dp"
-                                    android:layout_height="50dp"
-                                    android:src="@drawable/man_head"
-                                    android:id="@+id/man_head"
-                                    android:visibility="invisible" />
+                            <ImageView
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:src="@drawable/man_left_hand"
+                                android:id="@+id/man_left_hand"
+                                android:visibility="invisible" />
 
-                                <ImageView
-                                    android:layout_width="50dp"
-                                    android:layout_height="50dp"
-                                    android:src="@drawable/man_left_hand"
-                                    android:id="@+id/man_left_hand"
-                                    android:visibility="invisible" />
+                            <ImageView
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:src="@drawable/man_right_hand"
+                                android:id="@+id/man_right_hand"
+                                android:visibility="invisible" />
+                        </RelativeLayout>
 
-                                <ImageView
-                                    android:layout_width="50dp"
-                                    android:layout_height="50dp"
-                                    android:src="@drawable/man_right_hand"
-                                    android:id="@+id/man_right_hand"
-                                    android:visibility="invisible" />
-                            </RelativeLayout>
-
-
-                            <TextView
-                                android:id="@+id/headgear"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="8dp"
-                                android:layout_marginRight="8dp"
-                                android:layout_marginStart="8dp"
-                                android:fontFamily="sans-serif-condensed"
-                                android:text="HEADGEAR"
-                                android:textSize="10sp"
-                                android:textStyle="bold" />
-
-                            <TextView
-                                android:id="@+id/left_hand"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="8dp"
-                                android:layout_marginRight="8dp"
-                                android:layout_marginStart="8dp"
-                                android:fontFamily="sans-serif-condensed"
-                                android:text="LEFT HAND"
-                                android:textSize="10sp"
-                                android:textStyle="bold" />
-
-                            <TextView
-                                android:id="@+id/right_hand"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="8dp"
-                                android:layout_marginRight="8dp"
-                                android:layout_marginStart="8dp"
-                                android:fontFamily="sans-serif-condensed"
-                                android:text="RIGHT HAND"
-                                android:textSize="10sp"
-                                android:textStyle="bold" />
-
-                            <TextView
-                                android:id="@+id/armor"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="8dp"
-                                android:layout_marginRight="8dp"
-                                android:layout_marginStart="8dp"
-                                android:fontFamily="sans-serif-condensed"
-                                android:text="ARMOR"
-                                android:textSize="10sp"
-                                android:textStyle="bold" />
-
-                            <TextView
-                                android:id="@+id/footgear"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="8dp"
-                                android:layout_marginRight="8dp"
-                                android:layout_marginStart="8dp"
-                                android:fontFamily="sans-serif-condensed"
-                                android:text="FOOTGEAR"
-                                android:textSize="10sp"
-                                android:textStyle="bold" />
-
-                        </LinearLayout>
 
                     </LinearLayout>
+
+
 
                 </LinearLayout>
 
@@ -221,7 +159,7 @@ h
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="8">
+                    android:layout_weight="10">
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -286,6 +224,13 @@ h
                         android:textStyle="italic" />
 
                 </LinearLayout>
+
+                <ProgressBar
+                    android:id="@+id/time_to_action_bar"
+                    style="@android:style/Widget.ProgressBar.Horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:progress="100" />
 
                 <View
                     android:layout_width="match_parent"
