--- a/app/src/main/res/menu/new_play_desk.xml
+++ b/app/src/main/res/menu/new_play_desk.xml
@@ -18,6 +18,6 @@
         android:icon="@android:drawable/ic_menu_info_details"
         android:iconTint="#000000"
         android:orderInCategory="100"
-        android:title="@string/action_exit"
+        android:title="Info"
         app:showAsAction="always" />
 </menu>
