--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -34,7 +34,15 @@
         <item name="android:enabled">true</item>
     </style>
 
-    <style name="DialogTheme" parent="Animation.AppCompat.Dialog"></style>
+    <style name="DialogTheme" parent="Animation.AppCompat.Dialog" />
+
+    <style name="AppCompatAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">#546E7A</item>
+        <item name="android:textColorPrimary">#37474F</item>
+        <item name="android:background">#EFEBE9</item>
+        />
+
+    </style>
 
     <style name="Munchkin" parent="AppTheme" />
 
