--- a/app/src/main/res/layout/zoom_layout.xml
+++ b/app/src/main/res/layout/zoom_layout.xml
@@ -15,41 +15,41 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:layout_gravity="right"
+        android:orientation="vertical"
         android:padding="8dp">
 
         <Button
             android:id="@+id/move_to_played_button"
-            android:layout_margin="@dimen/button_margin"
             android:layout_width="130dp"
             android:layout_height="wrap_content"
-            android:text="Move to Played"
-            android:background="@drawable/style_button"/>
+            android:layout_margin="@dimen/button_margin"
+            android:background="@drawable/style_button"
+            android:text="Move to Played" />
 
         <Button
             android:id="@+id/move_to_hand_button"
-            android:layout_margin="@dimen/button_margin"
             android:layout_width="130dp"
             android:layout_height="wrap_content"
-            android:text="Move to Hand"
-            android:background="@drawable/style_button" />
+            android:layout_margin="@dimen/button_margin"
+            android:background="@drawable/style_button"
+            android:text="Move to Hand" />
 
         <Button
             android:id="@+id/move_to_desk_buton"
-            android:layout_margin="@dimen/button_margin"
             android:layout_width="130dp"
             android:layout_height="wrap_content"
-            android:text="Move to desk"
-            android:background="@drawable/style_button" />
+            android:layout_margin="@dimen/button_margin"
+            android:background="@drawable/style_button"
+            android:text="Move to desk" />
 
         <Button
             android:id="@+id/move_to_passive_card_deck"
-            android:layout_margin="@dimen/button_margin"
-            android:layout_width="130dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="DELETE"
-            android:background="@drawable/style_button" />
+            android:layout_margin="@dimen/button_margin"
+            android:background="@drawable/style_button"
+            android:text="Drop" />
     </LinearLayout>
 
 </LinearLayout>
