--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:colorForeground">@color/foreground_material_light</item>
         <item name="android:windowBackground">?android:attr/windowBackgroundFallback</item>
+        <item name="android:colorBackground">#EFEBE9</item>
 
     </style>
 
